Crash with bevel modifier #56450

Closed
opened 2018-08-18 23:45:06 +02:00 by Paul Szajner · 5 comments

System Information
Linux Debian Testing

Blender Version
version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-14 19:46, hash: 4a3348cfe0

Short description of error
In this particular scene, setting the bevel modifier width at 0 make blender crash.
This was the case with other objects in the scene. I've deleted them to simplify the scene.
I've tried to reproduce the crash with the default scene (cube) and it worked without errors.

Exact steps for others to reproduce the error
Open the attached file, set the bevel width to 0 and that should crash blender.
corridor_debug.blend

**System Information** Linux Debian Testing **Blender Version** version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-14 19:46, hash: 4a3348cfe04 **Short description of error** In this particular scene, setting the bevel modifier width at 0 make blender crash. This was the case with other objects in the scene. I've deleted them to simplify the scene. I've tried to reproduce the crash with the default scene (cube) and it worked without errors. **Exact steps for others to reproduce the error** Open the attached file, set the bevel width to 0 and that should crash blender. [corridor_debug.blend](https://archive.blender.org/developer/F4275757/corridor_debug.blend)
Author

Added subscriber: @sozap

Added subscriber: @sozap

This issue was referenced by c2c4420f89

This issue was referenced by c2c4420f89750309fdf267ba23a5f43b5e366e16

Added subscribers: @RohanRathi, @mont29

Added subscribers: @RohanRathi, @mont29
Bastien Montagne self-assigned this 2018-08-19 16:56:40 +02:00

@RohanRathi will fix, you must handle pointers in specific copying and reading code when you add them to modifier data ;)

@RohanRathi will fix, you must handle pointers in specific copying and reading code when you add them to modifier data ;)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56450
No description provided.