Fix T56450: Crash with bevel modifier.

POinters shall always be explicitely handled in modifier copying code,
as well as reading code! Runtime ones shall just be NULL-ed.